# mayuribin

./: .gitignore  README.md  example.config.toml  pyproject.toml
mayuribin/: __init__.py  __main__.py  mayuribin.py  route.py
mayuribin/assets/: about.md  footer.html  header.html
mayuribin/assets/css/: app.css
mayuribin/routes/: __init__.py  get_document.py  index_page.py  raw_document.py  save_document.py  serve_document.py  static.py
